_2007_12_13__10_49_05_ Chi-Hsiu Liang

  * Corrected some default pointer types for ModelledMolecule and CollidingMolecule
  * Change back the default value for EAboveWell
  * Change the order of parsing molecule list and reaction list, this including:
    1. addmols() -> addmol()
    2. source term numbering (initially source_0)
    3. Modified GetMolRef() to add molecule and return its pointer
  
_2007_12_07__16_30_57_ Chi-Hsiu Liang

  * Check redundancy for m_deltaEDown, m_RotConsts, m_Sym, m_ZPE
  * privatize m_VibFreq
  * add get_deltaEDown()
  * Added m_NInf in Reaction
  * There seems to be something wrong in the code but I cannot tell where it is. I have set a flag 
    if you look for this timestamp in the code: _2007_12_07__16_01_51_ 
    So if anyone has time to check what's wrong with it. I will keep on doing what I was doing. 
    The problem looks like if I change this line (I know the syntax is wrong so I have modified it to the correct one),
    the collision operator will not be initialized correctly, which is a bit strange.

_2007_12_05__19_19_09_ Chi-Hsiu Liang

  * Added codes for input file parameters redundancy check in Molecule
  * Updated destructors in System to Molecule level. Let distructors report redundancies.
  * Added electronic excitation. (in DOS calculation and xml input.)
  * Set EAboveWell as a member of m_Env (later will add it into the xml input)
  * still need to put ninf in somewhere of xml.
  * other minor modifications

_2007_12_04__11_17_27_ Chi-Hsiu Liang

Updated baseline for Cygwin 32-bit double.

_2007_12_04__10_04_16_ Chi-Hsiu Liang

Allow user to input filename after program starts.

2007-12-2  Struan Robertson

  * Corrected the method of addition of isomer collision opertators to overall 
  collision matrix.
  * Checked-in initial revision of Mesmer QA.

2007-11-30 Chris Morley
  
  * Removed Mesmer.exe from SVN. Compiled files are not usually in SVN
   and it always caused error messages when updating.
    